--- a/RF_grid_search.ipynb
+++ b/RF_grid_search.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "\n",
     "# Set up the grid search\n",
     "grid_search = GridSearchCV(estimator=rf, param_grid=param_grid, \n",
-    "                           cv=5, n_jobs=8, verbose=3)\n",
+    "                           cv=5, n_jobs=1, verbose=3)\n",
     "\n",
     "#get data\n",
     "X = images_df.drop(labels=['labels'], axis=1)\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -81,6 +81,16 @@
    "source": [
     "# Fit the grid search to the data\n",
     "grid_search.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save everything to disk when done fitting\n",
+    "pickle.dump(grid_search, open('grid_search.pkl', 'wb'))"
    ]
   }
  ],
@@ -100,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "0.0.0"
   }
  },
  "nbformat": 4,
