ran feature importance analysis

--- a/Sensitivity/image_prep.ipynb
+++ b/Sensitivity/image_prep.ipynb
@@ -150,7 +150,7 @@
     "    X = trimmed_df.drop(columns=['labels'], axis=1)\n",
     "    y = trimmed_df['labels'].values\n",
     "\n",
-    "    return train_test_split(X, y, test_size=0.2/.9, random_state=42)\n"
+    "    return (X,y)\n"
    ]
   },
   {
@@ -174,7 +174,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 130/130 [13:34<00:00,  6.26s/image]\n"
+      "100%|██████████| 130/130 [12:00<00:00,  5.54s/image]\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
     "data = data_prep()\n",
     "\n",
     "#store train test data with pickle\n",
-    "with open('train_test_data.pkl', 'wb') as f:\n",
+    "with open('X_y.pkl', 'wb') as f:\n",
     "    pickle.dump(data, f)"
    ]
   },
@@ -190,6 +190,215 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Blue</th>\n",
+       "      <th>Green</th>\n",
+       "      <th>Red</th>\n",
+       "      <th>Gray</th>\n",
+       "      <th>Gabor4</th>\n",
+       "      <th>Gabor5</th>\n",
+       "      <th>Gabor6</th>\n",
+       "      <th>Gabor8</th>\n",
+       "      <th>Gabor11</th>\n",
+       "      <th>Gabor23</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Sobel</th>\n",
+       "      <th>Scharr</th>\n",
+       "      <th>Prewitt</th>\n",
+       "      <th>Gaussian s3</th>\n",
+       "      <th>Gaussian s7</th>\n",
+       "      <th>Median s3</th>\n",
+       "      <th>Felzenszwalb</th>\n",
+       "      <th>Quickshift</th>\n",
+       "      <th>SLIC</th>\n",
+       "      <th>Watershed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4118</th>\n",
+       "      <td>33</td>\n",
+       "      <td>46</td>\n",
+       "      <td>61</td>\n",
+       "      <td>49</td>\n",
+       "      <td>184</td>\n",
+       "      <td>136</td>\n",
+       "      <td>112</td>\n",
+       "      <td>98</td>\n",
+       "      <td>62</td>\n",
+       "      <td>129</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.275950</td>\n",
+       "      <td>0.317628</td>\n",
+       "      <td>0.221070</td>\n",
+       "      <td>39</td>\n",
+       "      <td>41</td>\n",
+       "      <td>42</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4119</th>\n",
+       "      <td>31</td>\n",
+       "      <td>67</td>\n",
+       "      <td>92</td>\n",
+       "      <td>70</td>\n",
+       "      <td>121</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>255</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.225490</td>\n",
+       "      <td>0.204687</td>\n",
+       "      <td>0.258817</td>\n",
+       "      <td>40</td>\n",
+       "      <td>41</td>\n",
+       "      <td>49</td>\n",
+       "      <td>3</td>\n",
+       "      <td>64</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4120</th>\n",
+       "      <td>62</td>\n",
+       "      <td>94</td>\n",
+       "      <td>117</td>\n",
+       "      <td>97</td>\n",
+       "      <td>202</td>\n",
+       "      <td>211</td>\n",
+       "      <td>128</td>\n",
+       "      <td>110</td>\n",
+       "      <td>210</td>\n",
+       "      <td>54</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.243090</td>\n",
+       "      <td>0.258036</td>\n",
+       "      <td>0.231088</td>\n",
+       "      <td>39</td>\n",
+       "      <td>41</td>\n",
+       "      <td>42</td>\n",
+       "      <td>3</td>\n",
+       "      <td>64</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4756</th>\n",
+       "      <td>23</td>\n",
+       "      <td>49</td>\n",
+       "      <td>66</td>\n",
+       "      <td>51</td>\n",
+       "      <td>173</td>\n",
+       "      <td>102</td>\n",
+       "      <td>91</td>\n",
+       "      <td>77</td>\n",
+       "      <td>38</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.388478</td>\n",
+       "      <td>0.402723</td>\n",
+       "      <td>0.369667</td>\n",
+       "      <td>46</td>\n",
+       "      <td>45</td>\n",
+       "      <td>43</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4757</th>\n",
+       "      <td>34</td>\n",
+       "      <td>39</td>\n",
+       "      <td>54</td>\n",
+       "      <td>43</td>\n",
+       "      <td>189</td>\n",
+       "      <td>114</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>232</td>\n",
+       "      <td>115</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.387195</td>\n",
+       "      <td>0.415826</td>\n",
+       "      <td>0.351516</td>\n",
+       "      <td>50</td>\n",
+       "      <td>46</td>\n",
+       "      <td>51</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Blue  Green  Red  Gray  Gabor4  Gabor5  Gabor6  Gabor8  Gabor11  \\\n",
+       "4118    33     46   61    49     184     136     112      98       62   \n",
+       "4119    31     67   92    70     121       0       0       0       30   \n",
+       "4120    62     94  117    97     202     211     128     110      210   \n",
+       "4756    23     49   66    51     173     102      91      77       38   \n",
+       "4757    34     39   54    43     189     114      40       0      232   \n",
+       "\n",
+       "      Gabor23  ...     Sobel    Scharr   Prewitt  Gaussian s3  Gaussian s7  \\\n",
+       "4118      129  ...  0.275950  0.317628  0.221070           39           41   \n",
+       "4119      255  ...  0.225490  0.204687  0.258817           40           41   \n",
+       "4120       54  ...  0.243090  0.258036  0.231088           39           41   \n",
+       "4756        4  ...  0.388478  0.402723  0.369667           46           45   \n",
+       "4757      115  ...  0.387195  0.415826  0.351516           50           46   \n",
+       "\n",
+       "      Median s3  Felzenszwalb  Quickshift  SLIC  Watershed  \n",
+       "4118         42             3          26     7          9  \n",
+       "4119         49             3          64     7          9  \n",
+       "4120         42             3          64     7          9  \n",
+       "4756         43             3          26     7          7  \n",
+       "4757         51             3          26    16          9  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0].head()"
+   ]
   }
  ],
  "metadata": {
