--- a/Sensitivity/image_prep.ipynb
+++ b/Sensitivity/image_prep.ipynb
@@ -399,6 +399,392 @@
    "source": [
     "data[0].head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Blue</th>\n",
+       "      <th>Green</th>\n",
+       "      <th>Red</th>\n",
+       "      <th>Gray</th>\n",
+       "      <th>Gabor4</th>\n",
+       "      <th>Gabor5</th>\n",
+       "      <th>Gabor6</th>\n",
+       "      <th>Gabor8</th>\n",
+       "      <th>Gabor11</th>\n",
+       "      <th>Gabor23</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Sobel</th>\n",
+       "      <th>Scharr</th>\n",
+       "      <th>Prewitt</th>\n",
+       "      <th>Gaussian s3</th>\n",
+       "      <th>Gaussian s7</th>\n",
+       "      <th>Median s3</th>\n",
+       "      <th>Felzenszwalb</th>\n",
+       "      <th>Quickshift</th>\n",
+       "      <th>SLIC</th>\n",
+       "      <th>Watershed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4118</th>\n",
+       "      <td>33</td>\n",
+       "      <td>46</td>\n",
+       "      <td>61</td>\n",
+       "      <td>49</td>\n",
+       "      <td>184</td>\n",
+       "      <td>136</td>\n",
+       "      <td>112</td>\n",
+       "      <td>98</td>\n",
+       "      <td>62</td>\n",
+       "      <td>129</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.275950</td>\n",
+       "      <td>0.317628</td>\n",
+       "      <td>0.221070</td>\n",
+       "      <td>39</td>\n",
+       "      <td>41</td>\n",
+       "      <td>42</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4119</th>\n",
+       "      <td>31</td>\n",
+       "      <td>67</td>\n",
+       "      <td>92</td>\n",
+       "      <td>70</td>\n",
+       "      <td>121</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>255</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.225490</td>\n",
+       "      <td>0.204687</td>\n",
+       "      <td>0.258817</td>\n",
+       "      <td>40</td>\n",
+       "      <td>41</td>\n",
+       "      <td>49</td>\n",
+       "      <td>3</td>\n",
+       "      <td>64</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4120</th>\n",
+       "      <td>62</td>\n",
+       "      <td>94</td>\n",
+       "      <td>117</td>\n",
+       "      <td>97</td>\n",
+       "      <td>202</td>\n",
+       "      <td>211</td>\n",
+       "      <td>128</td>\n",
+       "      <td>110</td>\n",
+       "      <td>210</td>\n",
+       "      <td>54</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.243090</td>\n",
+       "      <td>0.258036</td>\n",
+       "      <td>0.231088</td>\n",
+       "      <td>39</td>\n",
+       "      <td>41</td>\n",
+       "      <td>42</td>\n",
+       "      <td>3</td>\n",
+       "      <td>64</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4756</th>\n",
+       "      <td>23</td>\n",
+       "      <td>49</td>\n",
+       "      <td>66</td>\n",
+       "      <td>51</td>\n",
+       "      <td>173</td>\n",
+       "      <td>102</td>\n",
+       "      <td>91</td>\n",
+       "      <td>77</td>\n",
+       "      <td>38</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.388478</td>\n",
+       "      <td>0.402723</td>\n",
+       "      <td>0.369667</td>\n",
+       "      <td>46</td>\n",
+       "      <td>45</td>\n",
+       "      <td>43</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4757</th>\n",
+       "      <td>34</td>\n",
+       "      <td>39</td>\n",
+       "      <td>54</td>\n",
+       "      <td>43</td>\n",
+       "      <td>189</td>\n",
+       "      <td>114</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>232</td>\n",
+       "      <td>115</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.387195</td>\n",
+       "      <td>0.415826</td>\n",
+       "      <td>0.351516</td>\n",
+       "      <td>50</td>\n",
+       "      <td>46</td>\n",
+       "      <td>51</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354363</th>\n",
+       "      <td>19</td>\n",
+       "      <td>39</td>\n",
+       "      <td>94</td>\n",
+       "      <td>53</td>\n",
+       "      <td>241</td>\n",
+       "      <td>124</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>208</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.123720</td>\n",
+       "      <td>0.134171</td>\n",
+       "      <td>0.126349</td>\n",
+       "      <td>55</td>\n",
+       "      <td>44</td>\n",
+       "      <td>93</td>\n",
+       "      <td>655</td>\n",
+       "      <td>4180</td>\n",
+       "      <td>181</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354364</th>\n",
+       "      <td>23</td>\n",
+       "      <td>41</td>\n",
+       "      <td>83</td>\n",
+       "      <td>52</td>\n",
+       "      <td>197</td>\n",
+       "      <td>59</td>\n",
+       "      <td>60</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.094000</td>\n",
+       "      <td>0.102117</td>\n",
+       "      <td>0.153170</td>\n",
+       "      <td>51</td>\n",
+       "      <td>42</td>\n",
+       "      <td>61</td>\n",
+       "      <td>655</td>\n",
+       "      <td>4180</td>\n",
+       "      <td>181</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355002</th>\n",
+       "      <td>118</td>\n",
+       "      <td>141</td>\n",
+       "      <td>186</td>\n",
+       "      <td>152</td>\n",
+       "      <td>255</td>\n",
+       "      <td>232</td>\n",
+       "      <td>200</td>\n",
+       "      <td>177</td>\n",
+       "      <td>225</td>\n",
+       "      <td>144</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.214668</td>\n",
+       "      <td>0.238976</td>\n",
+       "      <td>0.182766</td>\n",
+       "      <td>44</td>\n",
+       "      <td>41</td>\n",
+       "      <td>33</td>\n",
+       "      <td>655</td>\n",
+       "      <td>4167</td>\n",
+       "      <td>181</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355003</th>\n",
+       "      <td>32</td>\n",
+       "      <td>54</td>\n",
+       "      <td>97</td>\n",
+       "      <td>64</td>\n",
+       "      <td>166</td>\n",
+       "      <td>118</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>191</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.177288</td>\n",
+       "      <td>0.169614</td>\n",
+       "      <td>0.187683</td>\n",
+       "      <td>42</td>\n",
+       "      <td>39</td>\n",
+       "      <td>53</td>\n",
+       "      <td>655</td>\n",
+       "      <td>4180</td>\n",
+       "      <td>181</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355004</th>\n",
+       "      <td>106</td>\n",
+       "      <td>136</td>\n",
+       "      <td>188</td>\n",
+       "      <td>148</td>\n",
+       "      <td>179</td>\n",
+       "      <td>82</td>\n",
+       "      <td>97</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.166103</td>\n",
+       "      <td>0.181723</td>\n",
+       "      <td>0.145310</td>\n",
+       "      <td>38</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>655</td>\n",
+       "      <td>4167</td>\n",
+       "      <td>181</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21934226 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Blue  Green  Red  Gray  Gabor4  Gabor5  Gabor6  Gabor8  Gabor11  \\\n",
+       "4118      33     46   61    49     184     136     112      98       62   \n",
+       "4119      31     67   92    70     121       0       0       0       30   \n",
+       "4120      62     94  117    97     202     211     128     110      210   \n",
+       "4756      23     49   66    51     173     102      91      77       38   \n",
+       "4757      34     39   54    43     189     114      40       0      232   \n",
+       "...      ...    ...  ...   ...     ...     ...     ...     ...      ...   \n",
+       "354363    19     39   94    53     241     124      57       0        0   \n",
+       "354364    23     41   83    52     197      59      60      22        0   \n",
+       "355002   118    141  186   152     255     232     200     177      225   \n",
+       "355003    32     54   97    64     166     118       3       0       65   \n",
+       "355004   106    136  188   148     179      82      97      78        0   \n",
+       "\n",
+       "        Gabor23  ...     Sobel    Scharr   Prewitt  Gaussian s3  Gaussian s7  \\\n",
+       "4118        129  ...  0.275950  0.317628  0.221070           39           41   \n",
+       "4119        255  ...  0.225490  0.204687  0.258817           40           41   \n",
+       "4120         54  ...  0.243090  0.258036  0.231088           39           41   \n",
+       "4756          4  ...  0.388478  0.402723  0.369667           46           45   \n",
+       "4757        115  ...  0.387195  0.415826  0.351516           50           46   \n",
+       "...         ...  ...       ...       ...       ...          ...          ...   \n",
+       "354363      208  ...  0.123720  0.134171  0.126349           55           44   \n",
+       "354364      140  ...  0.094000  0.102117  0.153170           51           42   \n",
+       "355002      144  ...  0.214668  0.238976  0.182766           44           41   \n",
+       "355003      191  ...  0.177288  0.169614  0.187683           42           39   \n",
+       "355004        0  ...  0.166103  0.181723  0.145310           38           37   \n",
+       "\n",
+       "        Median s3  Felzenszwalb  Quickshift  SLIC  Watershed  \n",
+       "4118           42             3          26     7          9  \n",
+       "4119           49             3          64     7          9  \n",
+       "4120           42             3          64     7          9  \n",
+       "4756           43             3          26     7          7  \n",
+       "4757           51             3          26    16          9  \n",
+       "...           ...           ...         ...   ...        ...  \n",
+       "354363         93           655        4180   181        220  \n",
+       "354364         61           655        4180   181        220  \n",
+       "355002         33           655        4167   181        220  \n",
+       "355003         53           655        4180   181        220  \n",
+       "355004          0           655        4167   181        220  \n",
+       "\n",
+       "[21934226 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# open X_y.pkl\n",
+    "with open('../X_y.pkl', 'rb') as f:\n",
+    "    X,y = pickle.load(f)\n",
+    "\n",
+    "X"
+   ]
   }
  ],
  "metadata": {
